<resources>
	<string name="app_name">RealEstateManager</string>
	<string name="googlemaps_api">AIzaSyADBmQ_3NHCQjEFjqwO4R8YSe3WUc5AwcI</string>

	<string name="map_style">
        [
  {
    "featureType": "poi",
     "elementType": "labels",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  }
]
    </string>

	<string name="toolbar_menu_add">Ajouter</string>
	<string name="toolbar_menu_edit">Editer</string>
	<string name="toolbar_menu_search">Rechercher</string>
	<string name="toolbar_menu_map">Carte</string>

	<string-array name="property_types">
		<item>@string/flat</item>
		<item>@string/house</item>
		<item>@string/loft</item>
		<item>@string/manor</item>
	</string-array>

	<string name="flat">Appartement</string>
	<string name="house">Maison</string>
	<string name="loft">Loft</string>
	<string name="manor">Manoir</string>

	<string name="property_type">Type:</string>
	<string name="property_price">Prix:</string>
	<string name="property_surface">Surface:</string>
	<string name="property_numberRooms">Nombre de pièces:</string>
	<string name="property_description">Description:</string>
	<string name="property_address">Adresse:</string>
	<string name="property_zip_code">Code postal:</string>
	<string name="property_city">Ville:</string>
	<string name="property_neighborhood">Quartier:</string>
	<string name="property_POIs">Points d\'interêts:</string>
	<string name="dollar_sign">$</string>
	<string name="square_meters">m²</string>
	<string name="property_available">Disponible</string>
	<string name="property_sold">Vendu</string>
	<string name="property_entry_date">Date de mise en vente:</string>
	<string name="property_sale_date">Date de vente:</string>
	<string name="property_agent">Agent immobilier:</string>
	<string name="property_button_add_media">Ajouter photo</string>
	<string name="property_button_delete_medias">Effacer les photos</string>
	<plurals name="property_medias_added">
		<item quantity="one">%1d photo ajoutée</item>
		<item quantity="other">%1d photos ajoutées</item>
	</plurals>
	<string name="property_button_add_property">Ajouter bien</string>
	<string name="media_dialog_title">Ajouter photo</string>
	<string name="media_dialog_message">Choisir la source de la photo</string>
	<string name="media_dialog_gallery">Galerie</string>
	<string name="media_dialog_take_photo">Prendre photo</string>
	<string name="media_dialog_ok">OK</string>
	<string name="media_dialog_cancel">Annuler</string>
	<string name="media_dialog_add_description">Ajouter description</string>
	<string name="media_dialog_delete_medias_title">Effacer toutes les photos ?</string>
	<string name="media_dialog_no_cam">Aucune caméra trouvée sur l\'appareil</string>
	<string name="media_dialog_error_no_description">Vous devez ajouter une description à la photo</string>
	<string name="property_error_0_media">Vous devez ajouter au moins une photo</string>
	<string name="property_address_error">Vous devez ajouter l\'adresse complète ou laisser tous les champs de l\'adresse vide</string>
	<string name="address_error">L\'adresse semble erronnée</string>

	<string name="property_added">Bien ajouté</string>
	<string name="property_edited">Bien édité</string>
	<string name="property_medias">Photos</string>
	<string name="property_description_2">Description</string>
	<string name="date_hint">"jj/mm/aaaa</string>
	<string name="simulate_loan">Simuler un prêt pour ce bien</string>

	<string name="loan_contribution">Apport:</string>
	<string name="loan_rate">Taux:</string>
	<string name="loan_duration">Durée:</string>
	<string name="loan_calculate">Calculer mensualités</string>
	<string name="loan_payment">Mensualités:</string>
	<string name="loan_error">Veuillez remplir tous les champs</string>
	<string name="loan_payment_dollar">$%1$s</string>

	<string name="no_neighborhood">Quartier non renseigné</string>
	<string name="no_price">Prix non renseigné</string>

	<string name="edit_property">Editer bien</string>
	<string name="min">Min:</string>
	<string name="max">Max:</string>
	<string name="from">Du</string>
	<string name="to">Au</string>
	<string name="min_medias">Photos minimum:</string>
	<string name="reset">Effacer</string>

	<string name="search_check_type">Vous devez choisir au moins un type de bien</string>
	<string name="search_check_available">Vous devez choisir au moins les biens disponibles ou les biens vendus</string>

	<string name="no_property_found">Aucun bien trouvé</string>
	<string name="no_internet">Aucune connexion internet détectée</string>


</resources>
